@@ -7,6 +7,7 @@ v1.5.6 (WIP)
 - Add DropDown.SetAlwaysDrawDropDownSymbol (DropDown symbols are now shown only when focused by default)
 - Add DropDown.SetDropDownOpenSymbolRune
 - Fix TextView always visible scroll bar not appearing when empty
+- Fix passing mouse events to Grid items (events are now only passed to the item under the mouse)
 - Draw additional accents when rendering a list divider
 - Update Application.Draw and Application.QueueUpdateDraw to accept one or more
 primitives to draw instead of the whole screen
